...
    <!-- Activity and fragment titles -->
    <string name="app_name" translate="false">AntennaPod</string>
    <string name="provider_authority" translate="false">de.danoeh.antennapod.provider</string>
    <string name="feed_update_receiver_name">Update Subscriptions</string>
    <string name="feeds_label">Podcasts</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add Podcast</string>
    <string name="episodes_label">Episodes</string>
    <string name="all_episodes_short_label">All</string>
    <string name="new_episodes_label">New</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="new_label">New</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="downloads_running_label">Running</string>
    <string name="downloads_completed_label">Completed</string>
    <string name="downloads_log_label">Log</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="subscriptions_list_label">Subscriptions List</string>
    <string name="cancel_download_label">Cancel\nDownload</string>
    <string name="playback_history_label">Playback History</string>
    <string name="gpodnet_main_label">gpodder.net</string>
    <string name="gpodnet_auth_label">gpodder.net Login</string>
    <string name="episode_cache_full_title">Episode cache full</string>
    <string name="episode_cache_full_message">The episode cache limit has been reached. You can increase the cache size in the Settings.</string>
    <string name="playback_statistics_label">Playback</string>
    <string name="download_statistics_label">Downloads</string>
...
    <string name="go_to_position_label">Go to this Position</string>

    <!-- Playback history -->
    <string name="clear_history_label">Clear History</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="author_label">Author(s)</string>
    <string name="language_label">Language</string>
...
    <string name="no_subscriptions_label">To subscribe to a podcast, press the plus icon below.</string>

    <!-- Preferences -->
    <string name="storage_pref">Storage</string>
    <string name="storage_sum">Episode auto delete, Import, Export</string>
    <string name="project_pref">Project</string>
    <string name="queue_label">Queue</string>
    <string name="synchronization_pref">Synchronization</string>
    <string name="synchronization_sum">Synchronize with other devices using gpodder.net</string>
    <string name="automation">Automation</string>
    <string name="download_pref_details">Details</string>
    <string name="import_export_pref">Import/Export</string>
    <string name="import_export_search_keywords">backup, restore</string>
...
