<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/holo_red_dark">

    <RelativeLayout
        android:layout_width="match_parent"
...
            android:layout_height="4dp"
            android:layout_below="@id/appBar"
            android:background="@drawable/shadow" />

    </RelativeLayout>

    <include layout="@layout/nav_list" />

</android.support.v4.widget.DrawerLayout>
