<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:layout_alignParentTop="true"
            android:id="@+id/toolbar"/>

    <ListView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_below="@id/toolbar"
              android:id="@android:id/list"
              android:clipToPadding="false"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"/>

    <ProgressBar
            android:id="@+id/progLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateOnly="true"
            android:visibility="gone"/>

</RelativeLayout>
