...
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_antenna"
            tools:background="@android:color/holo_green_dark"/>

    <TextView
            android:id="@+id/txtvTitle"
            android:lines="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:layout_width="wrap_content"
...
